--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -2,23 +2,23 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
   padding: 2rem;
 
   .icon {
-    font-size: 4rem;
+    font-size: 5rem;
   }
 }
 
 .icon:not(.logo .icon) {
-  font-size: 2rem;
+  font-size: 2.5rem;
   padding: 1rem;
 }
 
 .sidebar__link {
-  font-size: 2rem;
+  font-size: var(--font-md);
   font-weight: var(--fw-500);
-  line-height: 2.5;
+  line-height: 2.3;
   padding: 0 2rem;
 
   display: flex;
@@ -34,5 +34,6 @@
   &:active {
     background-color: var(--contentColor);
     color: var(--textColor);
+    box-shadow: var(--shadow-3);
   }
 }
