--- a/sass/_user-section.scss
+++ b/sass/_user-section.scss
@@ -1,4 +1,45 @@
 .user {
+  &-search {
+    flex: 0 0 40%;
+
+    input {
+      width: 90%;
+      border-radius: 5rem;
+      background-color: var(--backgroundColor);
+      border: none;
+      padding: 0.9rem 2.5rem;
+      margin-right: -5rem;
+      transition: var(--transition);
+
+      &:focus {
+        width: 100%;
+      }
+    }
+
+    .icon {
+      color: #777;
+    }
+  }
+
+  &-notification {
+    gap: 3rem;
+    padding: 0 2rem;
+
+    img {
+      width: 5rem;
+      border-radius: 50%;
+    }
+
+    p {
+      font-size: 1.8rem;
+      font-weight: var(--fw-600);
+    }
+
+    #user-icon {
+      font-size: 2.8rem;
+    }
+  }
+
   &-greeting {
     font-size: var(--extra-small-text);
     font-weight: var(--fw-600);
@@ -6,7 +47,7 @@
   }
 
   &-name {
-    font-size: 2.4rem;
+    font-size: var(--font-lg);
     font-weight: var(--fw-600);
   }
 
