--- a/sass/main.css
+++ b/sass/main.css
@@ -127,7 +127,7 @@ ul {
   border-radius: 50%;
 }
 
-/* Buttons */
+/* BUTTONS */
 .btn {
   cursor: pointer;
   color: var(--white);
@@ -143,10 +143,10 @@ ul {
 }
 .btn:hover {
   background-color: var(--hoverColor);
-  box-shadow: var(--shadow-3);
+  box-shadow: var(--shadow-2);
 }
 
-/* Alerts */
+/* ALERTS */
 .alert {
   padding: 0.375rem 0.75rem;
   margin-bottom: 1rem;
@@ -162,7 +162,7 @@ ul {
   background: var(--green-light);
 }
 
-/* Form */
+/* FORM */
 .form {
   width: 90vw;
   max-width: var(--fixed-width);
@@ -206,7 +206,7 @@ ul {
   text-transform: capitalize;
 }
 
-/* Spinner */
+/* SPINNER */
 @keyframes spinner {
   to {
     transform: rotate(360deg);
@@ -293,7 +293,7 @@ ul {
   display: flex;
   align-items: center;
   gap: 1rem;
-  margin-bottom: 4rem;
+  margin-bottom: 3.5rem;
   padding: 2rem;
 }
 .logo .icon {
@@ -305,22 +305,26 @@ ul {
   padding: 1rem;
 }
 
+.sidebar__item :not(:last-child) {
+  margin-bottom: 0.5rem;
+}
+
 .sidebar__link {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
   font-size: var(--font-md);
   font-weight: var(--fw-500);
   line-height: 2.3;
   padding: 0 2rem;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
 }
 .sidebar__link:link, .sidebar__link:visited {
   color: var(--contentColor);
 }
 .sidebar__link:hover, .sidebar__link:active {
-  background-color: var(--contentColor);
+  background-color: rgba(255, 255, 255, 0.1);
   color: var(--textColor);
-  box-shadow: var(--shadow-3);
+  box-shadow: var(--shadow-2);
 }
 
 .user-search {
@@ -394,6 +398,15 @@ ul {
 .project-item .project-icons {
   align-self: flex-end;
   margin-bottom: -1.5rem;
+}
+.project-item a:link,
+.project-item a:visited {
+  color: inherit;
+  transition: var(--transition);
+}
+.project-item a:hover,
+.project-item a:active {
+  color: var(--sideBar);
 }
 .project p {
   color: var(--grey);
