--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-  margin-bottom: 4rem;
+  margin-bottom: 3.5rem;
   padding: 2rem;
 
   .icon {
@@ -15,15 +15,20 @@
   padding: 1rem;
 }
 
+.sidebar__item {
+  :not(:last-child) {
+    margin-bottom: 0.5rem;
+  }
+}
+
 .sidebar__link {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
   font-size: var(--font-md);
   font-weight: var(--fw-500);
   line-height: 2.3;
   padding: 0 2rem;
-
-  display: flex;
-  align-items: center;
-  gap: 1rem;
 
   &:link,
   &:visited {
@@ -32,8 +37,8 @@
 
   &:hover,
   &:active {
-    background-color: var(--contentColor);
+    background-color: rgba(255, 255, 255, 0.1);
     color: var(--textColor);
-    box-shadow: var(--shadow-3);
+    box-shadow: var(--shadow-2);
   }
 }
