Updated icons with Material Design icons

--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -12,7 +12,7 @@
     position: relative;
 
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       top: 0;
       left: 0;
@@ -20,9 +20,20 @@
       height: 100%;
       padding: 0.5rem;
     }
+
     .project-icons {
+      display: flex;
       align-self: flex-end;
+      gap: 2rem;
       margin-bottom: -1.5rem;
+
+      svg {
+        width: 24px;
+        height: 24px;
+        path {
+          fill: var(--textColor);
+        }
+      }
     }
 
     a:link,
