--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -5,26 +5,24 @@
   margin-bottom: 3.5rem;
   padding: 2rem;
 
-  .icon {
-    font-size: 5rem;
+  &-icon {
+    width: 4rem;
+    height: 4rem;
   }
 }
 
-.icon:not(.logo .icon) {
-  font-size: 2.5rem;
-  padding: 1rem;
-}
-
-.sidebar__item {
-  :not(:last-child) {
-    margin-bottom: 0.5rem;
+svg {
+  width: 2.5rem;
+  height: 2.5rem;
+  path {
+    fill: var(--white);
   }
 }
 
 .sidebar__link {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 2rem;
   font-size: var(--font-md);
   font-weight: var(--fw-500);
   line-height: 2.3;
@@ -38,7 +36,7 @@
   &:hover,
   &:active {
     background-color: rgba(255, 255, 255, 0.1);
-    color: var(--textColor);
+    // color: var(--textColor);
     box-shadow: var(--shadow-2);
   }
 }
