Added anchor tags to the icons

--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -25,7 +25,7 @@
       display: flex;
       align-self: flex-end;
       gap: 2rem;
-      margin-bottom: -1.5rem;
+      margin-top: 1rem;
 
       svg {
         width: 24px;
