--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -23,17 +23,10 @@
 
     .project-icons {
       display: flex;
+      align-items: center;
       align-self: flex-end;
-      gap: 2rem;
+      gap: 1rem;
       margin-top: 1rem;
-
-      svg {
-        width: 24px;
-        height: 24px;
-        path {
-          fill: var(--textColor);
-        }
-      }
     }
 
     a:link,
